chore: update readme