@@ -1,5 +1,141 @@
-# Tucil3_13523011_13523028
+# Tugas Kecil 3 IF2211 - Rush Hour Solver !!
+ 
+<div align="center">
+  <img src="https://github.com/user-attachments/assets/cc9ee3ca-1a45-455d-8150-a97da08c4ac8" alt="App Preview" />
+</div>
 
-NIM / Nama: 
-13523011 / Muhammad Ra'if Alkautsar
-13523028 / Muhammad Aditya Rahmadeni
+ <br>
+ <div align="center">
+   <h3 align="center">Tech Stacks and Languages</h3>
+
+   <p align="center">
+ 
+[![Java](https://img.shields.io/badge/Java-ED8B00?style=for-the-badge&logo=openjdk&logoColor=white)](https://www.java.com/)
+[![JavaFX](https://img.shields.io/badge/JavaFX-007396?style=for-the-badge&logo=java&logoColor=white)](https://openjfx.io/)
+
+   </p>
+ </div>
+
+ <p align="center">
+    <br />
+    <a href="https://github.com/Kurosue/Tucil3_13523011_13523028/releases/">Releases</a>
+    ·
+    <a href="https://github.com/Kurosue/Tucil3_13523011_13523028/doc/Tubes2_Nuggets.pdf">Project Report (Bahasa Indonesia)</a>
+</p>
+
+ <div align="justify">  </div>
+<br />
+<br />
+
+### Overview
+<br />
+
+This Rush Hour Solver is a program for finding routes (pathfinding) in the _Rush Hour_ game with the aim of moving a car to a specific coordinate. This program implements [_Uniform Cost Search_](https://www.geeksforgeeks.org/uniform-cost-search-ucs-in-ai/), [_Greedy Best First Search_](https://www.geeksforgeeks.org/greedy-best-first-search-algorithm/), and [_A* Search_](https://www.geeksforgeeks.org/a-search-algorithm/) algorithms and Using _JavaFX_ as module for GUI.
+ 
+ ---
+ 
+ ## Installation & Setup
+ 
+ ### Requirements
+ > - Java 22
+
+### Dependencies
+ > - JavaFX
+ > - Gradle
+
+ <br/>
+
+ ### Installing Dependencies and Requirement
+
+#### Installing Java
+1. **Windows**
+    - Download the latest JDK from [Oracle](https://www.oracle.com/java/technologies/downloads/) or [OpenJDK](https://adoptium.net/)
+    - Run the installer and follow the installation steps
+    - Verify installation by opening Command Prompt and typing:
+      ```bash
+      java --version
+      ```
+
+2. **macOS**
+    - Using Homebrew:
+      ```bash
+      brew install openjdk
+      ```
+    - Or download the installer from [Oracle](https://www.oracle.com/java/technologies/downloads/)
+    - Verify installation:
+      ```bash
+      java --version
+      ```
+
+3. **Linux**
+    - Ubuntu/Debian:
+      ```bash
+      curl -s "https://get.sdkman.io" | bash
+      source "$HOME/.sdkman/bin/sdkman-init.sh"
+      sdk install java 22-open
+      sdk default java 22-open
+      ```
+    - Verify installation:
+      ```bash
+      java --version
+      ```
+
+#### Installing JavaFX
+1. **Option 1: Using with an IDE (Recommended)**
+    - Most IDEs like IntelliJ IDEA or Eclipse have built-in support for JavaFX
+    - In IntelliJ, create a new JavaFX project or add JavaFX library to your existing project
+    
+2. **Option 2: Manual Installation**
+    - Download JavaFX SDK from [OpenJFX](https://openjfx.io/)
+    - Extract the downloaded file to a location on your computer
+    - Add JavaFX library to your project's build path
+    - Set VM options to include JavaFX modules:
+      ```
+      --module-path /path/to/javafx-sdk/lib --add-modules javafx.controls,javafx.fxml
+      ```
+
+ ---
+ ## How to Run
+ 1. Clone the repository
+    ```   bash
+    git clone https://github.com/Kurosue/Tucil3_13523011_13523028.git
+    ```
+ 2. Go to the project directory:
+    ```bash
+    cd Tucil3_13523011_13523028
+    ```
+ 3. You could use the .sh( Linux) and .bat( Windows) for easier 
+> [!Note]
+> Make sure that all of the dependencies are already installed
+ ---
+ <!-- CONTRIBUTOR -->
+ <div align="center" id="contributor">
+   <strong>
+     <h3> SSH </h3>
+     <table align="center">
+       <tr align="center">
+         <td>NIM</td>
+         <td>Name</td>
+         <td>GitHub</td>
+       </tr>
+       <tr align="center">
+         <td>13523011</td>
+         <td>Muhammad Ra'if Alkaustar</td>
+         <td><a href="https://github.com/mraifalkautsar">@mraifalkautsar</td>
+       </tr>
+       <tr align="center">
+         <td>13523028</td>
+         <td>Muhamamd Aditya Rahmadeni</td>
+         <td><a href="https://github.com/Kurosue">@Kurosue</a></td>
+       </tr>
+     </table>
+   </strong>
+ </div>
+ <br/>
+ <br/>
+ <br/>
+ <br/>
+ 
+ <div align="center">
+SSH • © 2025
+ </div>
